--- a/MainWindow.ui
+++ b/MainWindow.ui
@@ -14,7 +14,9 @@
    <string>QuteSQL</string>
   </property>
   <property name="windowIcon">
-   <iconset theme="server-database"/>
+   <iconset theme="server-database">
+    <normaloff/>
+   </iconset>
   </property>
   <widget class="QWidget" name="centralWidget">
    <property name="sizePolicy">
@@ -103,6 +105,8 @@
     <property name="title">
      <string>Tools</string>
     </property>
+    <addaction name="separator"/>
+    <addaction name="actionSplit_SQL_File"/>
    </widget>
    <widget class="QMenu" name="menuHelp">
     <property name="title">
@@ -141,7 +145,9 @@
   </widget>
   <action name="actionNew_Connection">
    <property name="icon">
-    <iconset theme="connect"/>
+    <iconset theme="connect">
+     <normaloff/>
+    </iconset>
    </property>
    <property name="text">
     <string>New Connection</string>
@@ -152,7 +158,9 @@
   </action>
   <action name="actionClose_Connection">
    <property name="icon">
-    <iconset theme="disconnect"/>
+    <iconset theme="disconnect">
+     <normaloff/>
+    </iconset>
    </property>
    <property name="text">
     <string>Close Connection</string>
@@ -160,7 +168,9 @@
   </action>
   <action name="actionQuit">
    <property name="icon">
-    <iconset theme="application-exit"/>
+    <iconset theme="application-exit">
+     <normaloff/>
+    </iconset>
    </property>
    <property name="text">
     <string>Quit</string>
@@ -191,13 +201,23 @@
   </action>
   <action name="actionRefresh">
    <property name="icon">
-    <iconset theme="view-refresh"/>
+    <iconset theme="view-refresh">
+     <normaloff/>
+    </iconset>
    </property>
    <property name="text">
     <string>Refresh</string>
    </property>
    <property name="toolTip">
     <string>Refresh the current database</string>
+   </property>
+  </action>
+  <action name="actionSplit_SQL_File">
+   <property name="icon">
+    <iconset theme="edit-table-cell-split"/>
+   </property>
+   <property name="text">
+    <string>Split SQL File</string>
    </property>
   </action>
  </widget>
