--- a/MainWindow.ui
+++ b/MainWindow.ui
@@ -131,7 +131,7 @@
     <bool>true</bool>
    </property>
    <property name="windowTitle">
-    <string>toolBar</string>
+    <string>Main Toolbar</string>
    </property>
    <attribute name="toolBarArea">
     <enum>TopToolBarArea</enum>
@@ -188,7 +188,7 @@
   </action>
   <action name="actionAbout_QuteSql">
    <property name="icon">
-    <iconset theme="database">
+    <iconset theme="help-about">
      <normaloff/>
     </iconset>
    </property>
@@ -198,7 +198,7 @@
   </action>
   <action name="actionAbout_Qt">
    <property name="icon">
-    <iconset theme="qt">
+    <iconset theme="help-about">
      <normaloff/>
     </iconset>
    </property>
