--- a/OpenConnectionDialog.ui
+++ b/OpenConnectionDialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>453</width>
-    <height>282</height>
+    <width>451</width>
+    <height>324</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -32,7 +32,7 @@
      </property>
     </widget>
    </item>
-   <item row="0" column="2" rowspan="2">
+   <item row="0" column="2" rowspan="3">
     <widget class="QGroupBox" name="connGroupBox">
      <property name="title">
       <string>Connection settings</string>
@@ -41,7 +41,7 @@
       <item row="0" column="0">
        <widget class="QLabel" name="textLabel2">
         <property name="text">
-         <string>D&amp;river</string>
+         <string>Dri&amp;ver</string>
         </property>
         <property name="buddy">
          <cstring>driverCombo</cstring>
@@ -122,7 +122,7 @@
       <item row="4" column="0">
        <widget class="QLabel" name="textLabel5">
         <property name="text">
-         <string>&amp;Hostname:</string>
+         <string>Hostna&amp;me:</string>
         </property>
         <property name="buddy">
          <cstring>hostnameEdit</cstring>
@@ -240,7 +240,14 @@
      </property>
     </widget>
    </item>
-   <item row="2" column="0">
+   <item row="2" column="0" colspan="2">
+    <widget class="QLineEdit" name="filterEdit">
+     <property name="placeholderText">
+      <string>Filter...</string>
+     </property>
+    </widget>
+   </item>
+   <item row="3" column="0">
     <widget class="QPushButton" name="addButton">
      <property name="text">
       <string>Add</string>
@@ -252,7 +259,7 @@
      </property>
     </widget>
    </item>
-   <item row="2" column="1">
+   <item row="3" column="1">
     <widget class="QPushButton" name="removeButton">
      <property name="text">
       <string>Remove</string>
@@ -264,7 +271,7 @@
      </property>
     </widget>
    </item>
-   <item row="2" column="2">
+   <item row="3" column="2">
     <widget class="QDialogButtonBox" name="buttonBox">
      <property name="standardButtons">
       <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
